# cookiecutter_fastapi_postgres

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  Dockerfile  Makefile  README.md  gunicorn-conf.py  pyproject.toml  server.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  app.py  exception_handlers.py  exceptions.py  middlewares.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/api/: {{cookiecutter.project_slug}}_base.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/clients/: __init__.py  base_http_client.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/conf/: constants.py  logging.py  sentry.py  settings.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/database/: __init__.py  db.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/schemas/: ok.py  version.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/tests/: conftest.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/tests/api/: test_{{cookiecutter.project_slug}}_base.py
